--- a/notebooks/1_introductions_data_handling.ipynb
+++ b/notebooks/1_introductions_data_handling.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "3)  The base idea of splitting data into csv files and how to perform it\n",
     "\n",
-    "When you have performed the data splitting into csv files, you may want to create `yaml` files based on these files for training and prediction. To do this, check the notebooks [Yaml files of Database-wise Split for Training and Prediction](physionet_DBwise_yaml_files.ipynb) and [Yaml files of Stratified Split for Training and Prediction](physionet_stratified_yaml_files.ipynb)"
+    "When you have performed the data splitting into csv files, you may want to create `yaml` files based on these files for training and prediction. To do this, check the notebooks [Yaml files of Database-wise Split for Training and Prediction](2_physionet_DBwise_yaml_files.ipynb) and [Yaml files of Stratified Split for Training and Prediction](2_physionet_stratified_yaml_files.ipynb)"
    ]
   },
   {
@@ -450,13 +450,13 @@
     "\n",
     "```\n",
     "# Original data location\n",
-    "from_directory = os.path.join(os.getcwd(), 'data', 'physionet_data')\n",
+    "from_directory = os.path.join(os.getcwd(), 'data', 'physionet_data_smoke')\n",
     "\n",
     "# New location for preprocessed data\n",
-    "new_directory = os.path.join(os.getcwd(), 'data', 'physionet_preprocessed')\n",
+    "new_directory = os.path.join(os.getcwd(), 'data', 'physionet_preprocessed_smoke')\n",
     "```\n",
     "\n",
-    "`from_directory` refers to the directory where the data in the original format is loaded, such as downloaded Physionet Challenge data. `new_directory`, as it's name suggests, refers to the new location where the directory tree of the original data location is first copied using a function `copy_tree` from the module `distutils.dir_util`. After this, *each directory in the new location* is iterated over and all the ECGs (which should be in MatLab format) are preprocessed with wanted transforms. *An original version of ECG is afterwards deleted and a preprocessed one saved in the new directory.*\n",
+    "`from_directory` refers to the directory where the data in the original format is loaded from, such as downloaded Physionet Challenge data. `new_directory`, as it's name suggests, refers to the new location where the directory tree of the original data location is first copied using a function `copy_tree` from the module `distutils.dir_util`. After this, *each directory in the new location* is iterated over and all the ECGs (which should be in MatLab format) are preprocessed with wanted transforms. *An original version of ECG is afterwards deleted and a preprocessed one saved in the new directory.*\n",
     "\n",
     "By default there are two transforms used, linear interpolation and BandPass filter:\n",
     "\n",
@@ -476,9 +476,9 @@
     "# ------------------------------\n",
     "```\n",
     "\n",
-    "The preprocessing part **is not mandatory for repository to work**. But if transforms, such as the two mentioned, are used e.g. during the training phase, that can significantly slow down training.\n",
+    "The preprocessing part **is not mandatory for the repository to work**. But if transforms, such as the two mentioned, are used e.g. during the training phase, that can significantly slow down training. That's why it's recommended to preprocess the data before training using the script mentioned.\n",
     "\n",
-    "All the other transforms are set in the script `dataset.py` in `src/dataloader/`. Several transforms are already available in the script `transforms.py` --- from where `Resample2` and `BandPassFilter` can be found too --- in the same path.\n",
+    "All the other transforms are set in the script `dataset.py` in `src/dataloader/`, which is run during training. Several transforms are already available in the script `transforms.py` --- from where `Resample2` and `BandPassFilter` can be found too --- in the same path.\n",
     "\n",
     "### Terminal command\n",
     "\n",
@@ -486,7 +486,9 @@
     "\n",
     "```\n",
     "python preprocess_data.py\n",
-    "```"
+    "```\n",
+    "\n",
+    "<font color = red>**NOTE!** The preprocessed ECGs will have different names as the original ones so it's important to mind if the preprosessing part is done or not!</font>"
    ]
   },
   {
@@ -501,12 +503,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b02b32d7",
+   "id": "f439d39e",
    "metadata": {},
    "source": [
-    "All the data splitting is done with the script `prepare_data.py`. The main idea for that script is to split the data into csv files which we can later use in training and testing the model. The csv files will be stored in a directory named after the yaml file used for split in `/data/split_csvs/`.\n",
+    "All the data splitting is done with the script `prepare_data.py`. The main idea for that script is to split the data into csv files which we can later use in training and testing a model. The csv files will be stored in a directory named after the yaml file used for split in `/data/split_csvs/`.\n",
     "\n",
-    "Csv files have the columns `path` (path for ECG recording), `age` , `gender` and all the diagnoses in SNOMED CT codes used as labels in the classification. The main structure of csv files are as follows:\n",
+    "Csv files have the columns `path` (path for an ECG recording), `age` , `gender` and all the diagnoses in SNOMED CT codes used as labels in classification. The main structure of csv files are as follows:\n",
     "\n",
     "\n",
     "| path  | age  | gender  | 10370003  | 111975006 | 164890007 | *other diagnoses...* |\n",
@@ -517,44 +519,43 @@
     "| ... | ... |  ...  | ... | ... | ... | ... |\n",
     "\n",
     "\n",
-    "The script uses `yaml` files to load the configurations for splits. They are located in `/configs/data_splitting`. There are two types of yaml files based on the split type (described below), *database-wise (DBwise)* and *stratified*.\n",
+    "The script uses `yaml` files to load the configurations for different splits. They are located in `/configs/data_splitting`. There are two types of yaml files based on the split type (described below), *database-wise (DBwise)* and *stratified*.\n",
     "\n",
-    "The yaml file for a **database-wise split** is constructed like one below (`physionet_DBwise_smoke.yaml`):\n",
+    "The yaml file for a <font color = green>**database-wise split**</font> is constructed like one below (`physionet_DBwise_smoke.yaml`):\n",
     "\n",
     "```\n",
     "# STRATIFIED OR DATABASE-WISE SPLIT\n",
     "stratified: False\n",
     "\n",
     "# INITIAL SETTINGS\n",
-    "data_dir: './data/physionet_data_smoke/'\n",
+    "data_dir: './data/physionet_preprocessed_smoke/'\n",
     "save_dir: './data/split_csvs/'\n",
     "\n",
     "```\n",
     "\n",
-    "So there are basicly a boolean valued variable `stratified` which makes the difference between the two types of splits, `data_dir` which refers to the location where the data is loaded from, and `save_dir` which refers to the location where the csv files of splits are saved in.\n",
+    "So there are a boolean valued variable `stratified` which makes the difference between the two types of splits, `data_dir` which refers to the location where the data is loaded from, and `save_dir` which refers to the location where the csv files of splits are saved in.\n",
     "\n",
-    "The yaml file for a **stratified split** is constructed like one below (`physionet_stratified_smoke.yaml`):\n",
+    "The yaml file for a <font color = green>**stratified split**</font> is constructed like one below (`physionet_stratified_smoke.yaml`):\n",
     "\n",
     "```\n",
     "# STRATIFIED OR DATABASE-WISE SPLIT\n",
     "stratified: True\n",
     "\n",
     "# INITIAL SETTINGS\n",
-    "data_dir: './data/physionet_data_smoke/'\n",
+    "data_dir: './data/physionet_preprocessed_smoke/'\n",
     "save_dir: './data/split_csvs/'\n",
     "\n",
     "splits:\n",
     "    - split_1:\n",
     "      train: ['G12EC', 'INCART', 'PTB_PTBXL', 'ChapmanShaoxing_Ningbo']\n",
     "      test: 'CPSC_CPSC-Extra'\n",
-    "    - split_2:\n",
-    "      train: ['G12EC', 'INCART', 'PTB_PTBXL', 'CPSC_CPSC-Extra']\n",
-    "      test: 'ChapmanShaoxing_Ningbo'\n",
     "```\n",
     "\n",
-    "Where the same variables `stratified`, `data_dir` and `save_dir` are set as with a database-wise yaml but there also is `splits` which is a dictionary of training-testing splits to make different splits of the data at the same time and that way there's no need to run multiple yaml files separately. Train data will be further stratified into training and validation splits which are both saved in csv files. \n",
+    "where the same variables `stratified`, `data_dir` and `save_dir` are set as with a database-wise yaml but there also is `splits` which is a dictionary of training-testing splits to make different splits of the data at the same time and that way there's no need to run multiple yaml files separately. Train data will be further stratified into training and validation splits which are both saved in csv files. \n",
     "\n",
-    "To perform data splits, the class labels are needed to be set in the script. Set the attribute `labels` for that use."
+    "To perform data splits, the class labels are needed to be set in the script. Set the attribute `labels` for that use.\n",
+    "\n",
+    "<font color = red>**NOTE!**</font> <font color = green> **Here, the** `data_dir` **attribute is set with the assumption that *the data is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as** `./data/physionet_data_smoke/`. The paths for ECGs will be different in the csv files based on the fact if the data is preprocessed or not.</font>"
    ]
   },
   {
@@ -620,19 +621,20 @@
     "labels = ['426783006', '426177001', '164934002', '427084000', '164890007', '39732003', '164889003', '59931005', '427393009', '270492004']\n",
     "```\n",
     "\n",
-    "So the class label used are the 10 most common class labels in the whole Physionet Challenge dataset (referring to the data exploration made in `exploration_physionet2021_data`). The class labels in more detail:\n",
+    "So the class label used are the 10 most common class labels in the whole Physionet Challenge dataset (referring to [Exploration of the PhysioNet2021 Data](#exploration_physionet2021_data)). The class labels in more detail are as follows:\n",
     "\n",
-    "name | SNOMED CT code | Total number of diagnoses in the wholedata\n",
-    "- sinus rhythm [426783006] -- 28971 pcs\n",
-    "- sinus bradycardia [426177001] -- 18918 pcs\n",
-    "- t wave abnormal [164934002] -- 11716 pcs\n",
-    "- sinus tachycardia [427084000] -- 9657 pcs\n",
-    "- atrial flutter [164890007] -- 8374 pcs\n",
-    "- left axis deviation [39732003] -- 7631 pcs\n",
-    "- atrial fibrillation [164889003] -- 5255 pcs\n",
-    "- t wave inversion [59931005] -- 3989 pcs\n",
-    "- sinus arrhythmia [427393009] -- 3790 pcs\n",
-    "- 1st degree av block [270492004] -- 3534 pcs\n",
+    "name | SNOMED CT code | Total number of diagnoses <br>in the whole data\n",
+    "-----|----------------|-------------------------------------------\n",
+    "sinus rhythm |426783006 | 28971\n",
+    "sinus bradycardia| 426177001 | 18918 \n",
+    "t wave abnormal| 164934002 | 11716\n",
+    "sinus tachycardia |427084000 | 9657 \n",
+    "atrial flutter| 164890007 | 8374\n",
+    "left axis deviation |39732003 | 7631 \n",
+    "atrial fibrillation |164889003 | 5255 \n",
+    "t wave inversion| 59931005 | 3989 \n",
+    "sinus arrhythmia |427393009 | 3790\n",
+    "1st degree av block| 270492004 | 3534 \n",
     "\n",
     "#### Database-wise split\n",
     "\n",
@@ -656,11 +658,10 @@
     "\n",
     "#### Stratified split\n",
     "\n",
-    "The yaml for the stratified split is presented above, `physionet_stratified_smoke.yaml`. There are two splits which are made by running the file.\n",
+    "The yaml for the stratified split is presented above, `physionet_stratified_smoke.yaml`. There is one split which is made by running the file.\n",
     "\n",
-    "1) Train data is from the directories *G12EC, INCART, PTB_PTBXL* and *ChapmanShaoxing_Ningbo*. Test data is from the directory *CPSC_CPSC-Extra*.\n",
-    "   \n",
-    "2) Train data is from the directories *G12EC, INCART PTB_PTBXL* and *CPSC_CPSC-Extra*. Test data is from the directory *ChapmanShaoxing_Ningbo*\n",
+    "- Train data is from the directories *G12EC, INCART, PTB_PTBXL* and *ChapmanShaoxing_Ningbo*\n",
+    "- Test data is from the directory *CPSC_CPSC-Extra*.\n",
     "\n",
     "The command is the following\n",
     "\n",
@@ -668,23 +669,18 @@
     "python prepare_data.py physionet_stratified_smoke.yaml\n",
     "```\n",
     "\n",
-    "The csv files are then located in `./data/split_csvs/physionet_stratified_smoke/` as ('...' refers to files not listed below)\n",
+    "The csv files are then located in `./data/split_csvs/physionet_stratified_smoke/` and you should now find the following files in the path:\n",
     "\n",
     "```\n",
-    "test_split1.csv\n",
-    "test_split2.csv\n",
-    "train_split1_0.csv\n",
-    "train_split1_1.csv\n",
-    "...\n",
-    "train_split2_0.csv\n",
-    "train_split2_1.csv\n",
-    "...\n",
-    "val_split1_0.csv\n",
-    "val_split1_1.csv\n",
-    "...\n",
-    "val_split2_0.csv\n",
-    "val_split2_1.csv\n",
-    "...\n",
+    "test_split0.csv\n",
+    "train_split0_0.csv\n",
+    "train_split0_1.csv\n",
+    "train_split0_2.csv\n",
+    "train_split0_3.csv\n",
+    "val_split0_0.csv\n",
+    "val_split0_1.csv\n",
+    "val_split0_2.csv\n",
+    "val_split0_3.csv\n",
     "```"
    ]
   }
