--- a/notebooks/2_physionet_DBwise_yaml_files.ipynb
+++ b/notebooks/2_physionet_DBwise_yaml_files.ipynb
@@ -7,14 +7,14 @@
    "source": [
     "# Yaml files of Database-wise Split for Training and Prediction\n",
     "\n",
-    "With this notebook, you can create the yaml files needed in training and prediction with a data split which is made database-wise. The so-called \"original data split\" should be first made as with the script `prepare_data.py`. More detailed information about this is available in the notebook [Introductions for Data Handling](introductions_data_handling.ipynb). \n",
+    "With this notebook, you can create the yaml files needed in training and prediction with a data split which is made database-wise. The so-called \"original data split\" should be first made as with the script `prepare_data.py`. More detailed information about this is available in the notebook [Introductions for Data Handling](1_introductions_data_handling.ipynb). \n",
     "\n",
     "------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d2f21607",
    "metadata": {},
    "outputs": [],
@@ -25,36 +25,37 @@
     "# ----------------------------------------\n",
     "\n",
     "# From where to load the csv files of \"original data split\"\n",
-    "csv_path = os.path.join('../data/split_csvs/', 'physionet_DBwise')\n",
+    "csv_path = os.path.join('../data/split_csvs/', 'physionet_DBwise_smoke')\n",
     "\n",
     "# Where to save combined training csv files\n",
     "# e.g. we want to use PTB_PTBXL.csv, INCART.csv and G12EC.csv for training\n",
     "#      so we need to combine them first for the model to use them\n",
-    "combined_save_path = os.path.join('../data/split_csvs', 'physionet_DBwise')\n",
+    "combined_save_path = os.path.join('../data/split_csvs', 'physionet_DBwise_smoke')\n",
     "\n",
     "# Where to save the training yaml files\n",
-    "train_yaml_save_path = os.path.join('../configs/training', 'train_DBwise')\n",
+    "train_yaml_save_path = os.path.join('../configs/training', 'train_DBwise_smoke')\n",
     "\n",
     "# Where to save the testing yaml files\n",
-    "test_yaml_save_path = os.path.join('../configs/predicting', 'prediction_DBwise')\n",
+    "test_yaml_save_path = os.path.join('../configs/predicting', 'prediction_DBwise_smoke')\n",
     "\n",
     "# The files which need to be split into training and validation data\n",
     "# We have 5 different databases so 5 different train/val split sets\n",
-    "training_data = [['PTB_PTBXL.csv', 'INCART.csv', 'G12EC.csv', 'ChapmanShaoxing_Ningbo.csv'],\n",
-    "                 ['PTB_PTBXL.csv', 'INCART.csv', 'G12EC.csv', 'CPSC_CPSC-Extra.csv'],\n",
-    "                 ['PTB_PTBXL.csv', 'INCART.csv', 'CPSC_CPSC-Extra.csv', 'ChapmanShaoxing_Ningbo.csv'],\n",
-    "                 ['PTB_PTBXL.csv', 'CPSC_CPSC-Extra.csv', 'G12EC.csv', 'ChapmanShaoxing_Ningbo.csv'],\n",
-    "                 ['INCART.csv', 'CPSC_CPSC-Extra.csv', 'G12EC.csv','ChapmanShaoxing_Ningbo.csv']\n",
-    "                ]\n",
+    "training_data = [['PTB_PTBXL.csv', 'INCART.csv', 'G12EC.csv', 'ChapmanShaoxing_Ningbo.csv']]\n",
+    "\n",
+    "# !! All the other splits -> just add to the list above if wanted\n",
+    "# ['PTB_PTBXL.csv', 'INCART.csv', 'G12EC.csv', 'CPSC_CPSC-Extra.csv'],\n",
+    "# ['PTB_PTBXL.csv', 'INCART.csv', 'CPSC_CPSC-Extra.csv', 'ChapmanShaoxing_Ningbo.csv'],\n",
+    "# ['PTB_PTBXL.csv', 'CPSC_CPSC-Extra.csv', 'G12EC.csv', 'ChapmanShaoxing_Ningbo.csv'],\n",
+    "# ['INCART.csv', 'CPSC_CPSC-Extra.csv', 'G12EC.csv','ChapmanShaoxing_Ningbo.csv']\n",
     "\n",
     "# Name for yaml files given as a string\n",
     "# names will be formed as <name><index>.yaml\n",
     "name = 'split'\n",
     "\n",
     "# --- Parameters for training yaml files -------------\n",
-    "batch_size = 64\n",
+    "batch_size = 10\n",
     "num_workers = 0\n",
-    "epochs = 50"
+    "epochs = 1"
    ]
   },
   {
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f005f047",
    "metadata": {},
    "outputs": [
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9b4c3f9e",
    "metadata": {
     "scrolled": false
@@ -228,12 +229,6 @@
       "[['PTB_PTBXL.csv', 'INCART.csv', 'ChapmanShaoxing_Ningbo.csv'], ['G12EC.csv'], ['CPSC_CPSC-Extra.csv']]\n",
       "[['PTB_PTBXL.csv', 'G12EC.csv', 'ChapmanShaoxing_Ningbo.csv'], ['INCART.csv'], ['CPSC_CPSC-Extra.csv']]\n",
       "[['INCART.csv', 'G12EC.csv', 'ChapmanShaoxing_Ningbo.csv'], ['PTB_PTBXL.csv'], ['CPSC_CPSC-Extra.csv']]\n",
-      "The length of the first set: 4\n",
-      "\n",
-      "[['PTB_PTBXL.csv', 'INCART.csv', 'G12EC.csv'], ['CPSC_CPSC-Extra.csv'], ['ChapmanShaoxing_Ningbo.csv']]\n",
-      "[['PTB_PTBXL.csv', 'INCART.csv', 'CPSC_CPSC-Extra.csv'], ['G12EC.csv'], ['ChapmanShaoxing_Ningbo.csv']]\n",
-      "[['PTB_PTBXL.csv', 'G12EC.csv', 'CPSC_CPSC-Extra.csv'], ['INCART.csv'], ['ChapmanShaoxing_Ningbo.csv']]\n",
-      "[['INCART.csv', 'G12EC.csv', 'CPSC_CPSC-Extra.csv'], ['PTB_PTBXL.csv'], ['ChapmanShaoxing_Ningbo.csv']]\n",
       "The length of the first set: 4\n"
      ]
     }
@@ -270,12 +265,7 @@
     "\n",
     "# For example, data_1\n",
     "print(*combinations_data[0], sep='\\n')\n",
-    "print('The length of the first set:', len(combinations_data[0]))\n",
-    "\n",
-    "print()\n",
-    "# and data_2\n",
-    "print(*combinations_data[1], sep='\\n')\n",
-    "print('The length of the first set:', len(combinations_data[1]))"
+    "print('The length of the first set:', len(combinations_data[0]))"
    ]
   },
   {
@@ -311,8 +301,8 @@
     "\n",
     "```\n",
     "# INITIAL SETTINGS\n",
-    "train_file: 'train_split1_0.csv'\n",
-    "val_file: 'val_split1_0.csv'\n",
+    "train_file: PTB_PTBXL_INCART_G12EC.csv\n",
+    "val_file: ChapmanShaoxing_Ningbo.csv\n",
     "\n",
     "# TRAINING SETTINGS\n",
     "batch_size: 10\n",
@@ -320,20 +310,21 @@
     "\n",
     "# SAVE, LOAD AND DISPLAY INFORMATION\n",
     "epochs: 1\n",
+    "\n",
     "```\n",
     "\n",
     "and the one of the prediction yaml files as follows\n",
     "\n",
     "```\n",
     "# INITIAL SETTINGS\n",
-    "test_file: 'test_split1.csv'\n",
-    "model: 'train_smoke.pth'\n",
+    "test_file: CPSC_CPSC-Extra.csv\n",
+    "model: split0.pth\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bfa36ae7",
    "metadata": {
     "scrolled": false
@@ -343,25 +334,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Saving combined training data as PTB_PTBXL_INCART_G12EC.csv with a length of 30.\n",
+      "Validation data is from ChapmanShaoxing_Ningbo.csv\n",
+      "Testing data is from CPSC_CPSC-Extra.csv\n",
       "\n",
+      "Saving combined training data as PTB_PTBXL_INCART_ChapmanShaoxing_Ningbo.csv with a length of 33.\n",
+      "Validation data is from G12EC.csv\n",
+      "Testing data is from CPSC_CPSC-Extra.csv\n",
       "\n",
+      "Saving combined training data as PTB_PTBXL_G12EC_ChapmanShaoxing_Ningbo.csv with a length of 34.\n",
+      "Validation data is from INCART.csv\n",
+      "Testing data is from CPSC_CPSC-Extra.csv\n",
       "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
+      "Saving combined training data as INCART_G12EC_ChapmanShaoxing_Ningbo.csv with a length of 29.\n",
+      "Validation data is from PTB_PTBXL.csv\n",
+      "Testing data is from CPSC_CPSC-Extra.csv\n",
       "\n"
      ]
     }
@@ -469,7 +456,9 @@
    "source": [
     "Now all the yaml files for training, validation and prediction are created! The training yaml files are located in `/configs/training/train_DBwise_smoke/` and the prediction yaml files in `/configs/predicting/prediction_DBwise_smoke/`.\n",
     "\n",
-    "<font color=red>**NOTE!**</font> If you are now wondering why the yaml files don't have the csv values --- `train_file`, `val_file` and `test_file` --- in single quotation marks, it's ok. Scripts are able to read and load the values from the yaml files even without those marks!\n"
+    "<font color=red>**NOTE 1!**</font> It is extremely important that in the test yaml file the model is set with the same name as the yaml file which the model is trained with. E.g. when a model is trained using `split0.yaml`, it will be saved as `split0.pth`. This makes using the repository much easier and simpler. Mind this, if you want to edit the code below.\n",
+    "\n",
+    "<font color=red>**NOTE 2!**</font> If you are now wondering why the yaml files don't have the csv values in single quotation marks, it's ok. Scripts are able to read and load the values from the yaml files even without those marks!"
    ]
   }
  ],
