--- a/notebooks/2_physionet_stratified_yaml_files.ipynb
+++ b/notebooks/2_physionet_stratified_yaml_files.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Yaml files of Stratified Split for Training and Prediction\n",
     "\n",
-    "With this notebook, you can create the yaml files needed in training and prediction with a data split which is made stratified. More detailed information about the stratified data split itself is available in the notebook [Introductions for Data Handling](introductions_data_handling.ipynb).\n",
+    "With this notebook, you can create the yaml files needed in training and prediction with a data split which is made  using **stratifiction**. More detailed information about the stratified data split itself is available in the notebook [Introductions for Data Handling](1_introductions_data_handling.ipynb).\n",
     "\n",
     "------"
    ]
@@ -25,18 +25,18 @@
     "# ------------------------------------------\n",
     "\n",
     "# From where to load the csv files of stratified split\n",
-    "csv_path = os.path.join('../data/split_csvs/', 'physionet_stratified')\n",
+    "csv_path = os.path.join('../data/split_csvs/', 'physionet_stratified_smoke')\n",
     "\n",
     "# Where to save the training yaml files\n",
-    "train_yaml_save_path = os.path.join('../configs/training', 'train_stratified')\n",
+    "train_yaml_save_path = os.path.join('../configs/training', 'train_stratified_smoke')\n",
     "\n",
     "# Where to save the testing yaml files\n",
-    "test_yaml_save_path = os.path.join('../configs/predicting', 'prediction_stratified')\n",
+    "test_yaml_save_path = os.path.join('../configs/predicting', 'prediction_stratified_smoke')\n",
     "\n",
     "# Parameters for training yaml files\n",
-    "batch_size = 64\n",
+    "batch_size = 10\n",
     "num_workers = 0\n",
-    "epochs = 50"
+    "epochs = 1"
    ]
   },
   {
@@ -58,50 +58,14 @@
      "output_type": "stream",
      "text": [
       "test_split0.csv\n",
-      "test_split1.csv\n",
-      "test_split2.csv\n",
-      "test_split3.csv\n",
-      "test_split4.csv\n",
       "train_split0_0.csv\n",
       "train_split0_1.csv\n",
       "train_split0_2.csv\n",
       "train_split0_3.csv\n",
-      "train_split1_0.csv\n",
-      "train_split1_1.csv\n",
-      "train_split1_2.csv\n",
-      "train_split1_3.csv\n",
-      "train_split2_0.csv\n",
-      "train_split2_1.csv\n",
-      "train_split2_2.csv\n",
-      "train_split2_3.csv\n",
-      "train_split3_0.csv\n",
-      "train_split3_1.csv\n",
-      "train_split3_2.csv\n",
-      "train_split3_3.csv\n",
-      "train_split4_0.csv\n",
-      "train_split4_1.csv\n",
-      "train_split4_2.csv\n",
-      "train_split4_3.csv\n",
       "val_split0_0.csv\n",
       "val_split0_1.csv\n",
       "val_split0_2.csv\n",
-      "val_split0_3.csv\n",
-      "val_split1_0.csv\n",
-      "val_split1_1.csv\n",
-      "val_split1_2.csv\n",
-      "val_split1_3.csv\n",
-      "val_split2_0.csv\n",
-      "val_split2_1.csv\n",
-      "val_split2_2.csv\n",
-      "val_split2_3.csv\n",
-      "val_split3_0.csv\n",
-      "val_split3_1.csv\n",
-      "val_split3_2.csv\n",
-      "val_split3_3.csv\n",
-      "val_split4_0.csv\n",
-      "val_split4_1.csv\n",
-      "val_split4_2.csv\n",
-      "val_split4_3.csv\n"
+      "val_split0_3.csv\n"
      ]
     }
    ],
@@ -124,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "b0dedbb0",
    "metadata": {
     "scrolled": false
@@ -139,31 +103,14 @@
       "('train_split0_1.csv', 'val_split0_1.csv')\n",
       "('train_split0_2.csv', 'val_split0_2.csv')\n",
       "('train_split0_3.csv', 'val_split0_3.csv')\n",
-      "('train_split1_0.csv', 'val_split1_0.csv')\n",
       "\n",
       "Training, validation and testing pairs\n",
       "['train_split0_0.csv', 'val_split0_0.csv', 'test_split0.csv']\n",
       "['train_split0_1.csv', 'val_split0_1.csv', 'test_split0.csv']\n",
       "['train_split0_2.csv', 'val_split0_2.csv', 'test_split0.csv']\n",
       "['train_split0_3.csv', 'val_split0_3.csv', 'test_split0.csv']\n",
-      "['train_split1_0.csv', 'val_split1_0.csv', 'test_split1.csv']\n",
-      "['train_split1_1.csv', 'val_split1_1.csv', 'test_split1.csv']\n",
-      "['train_split1_2.csv', 'val_split1_2.csv', 'test_split1.csv']\n",
-      "['train_split1_3.csv', 'val_split1_3.csv', 'test_split1.csv']\n",
-      "['train_split2_0.csv', 'val_split2_0.csv', 'test_split2.csv']\n",
-      "['train_split2_1.csv', 'val_split2_1.csv', 'test_split2.csv']\n",
-      "['train_split2_2.csv', 'val_split2_2.csv', 'test_split2.csv']\n",
-      "['train_split2_3.csv', 'val_split2_3.csv', 'test_split2.csv']\n",
-      "['train_split3_0.csv', 'val_split3_0.csv', 'test_split3.csv']\n",
-      "['train_split3_1.csv', 'val_split3_1.csv', 'test_split3.csv']\n",
-      "['train_split3_2.csv', 'val_split3_2.csv', 'test_split3.csv']\n",
-      "['train_split3_3.csv', 'val_split3_3.csv', 'test_split3.csv']\n",
-      "['train_split4_0.csv', 'val_split4_0.csv', 'test_split4.csv']\n",
-      "['train_split4_1.csv', 'val_split4_1.csv', 'test_split4.csv']\n",
-      "['train_split4_2.csv', 'val_split4_2.csv', 'test_split4.csv']\n",
-      "['train_split4_3.csv', 'val_split4_3.csv', 'test_split4.csv']\n",
       "\n",
-      "Total of 20 training, validation and testing sets\n"
+      "Total of 4 training, validation and testing sets\n"
      ]
     }
    ],
@@ -181,7 +128,7 @@
     "print()\n",
     "\n",
     "# Seems right based on the print:\n",
-    "# Add the prediction file\n",
+    "# Add the prediction fi\n",
     "test_files = [file for file in csv_files if 'test' in file]\n",
     "\n",
     "split_nums = [] # These are for yaml files!!\n",
@@ -220,8 +167,8 @@
     "\n",
     "```\n",
     "# INITIAL SETTINGS\n",
-    "train_file: 'train_split1_0.csv'\n",
-    "val_file: 'val_split1_0.csv'\n",
+    "train_file: train_split0_0.csv\n",
+    "val_file: val_split0_0.csv\n",
     "\n",
     "# TRAINING SETTINGS\n",
     "batch_size: 10\n",
@@ -229,17 +176,18 @@
     "\n",
     "# SAVE, LOAD AND DISPLAY INFORMATION\n",
     "epochs: 1\n",
+    "\n",
     "```\n",
     "\n",
     "and of the prediction yaml file as follows\n",
     "\n",
     "```\n",
     "# INITIAL SETTINGS\n",
-    "test_file: 'test_split1.csv'\n",
-    "model: 'train_smoke.pth'\n",
+    "test_file: test_split0.csv\n",
+    "model: split0_0.pth\n",
     "```\n",
     "\n",
-    "*Feel free to set the attributes as you want in the very first code chunk.* \n",
+    "*Feel free to set the attributes for training settings and other information as you want in the very first code chunk.* \n",
     "\n",
     "<font color = red>**NOTE!**</font> (*Consider only if you have already created all the csv files of different stratified splits.*) Feel also free to create only a part of the yaml files. All the train-val-test sets are listed in the variable `train_val_test` so it's easy to iterate over only a part of it. If you want to part it, remember to consider `split_nums` too since the yaml files will be named after it."
    ]
@@ -285,70 +233,6 @@
       "Training, validation and testing set is\n",
       "train_split0_3 \t val_split0_3 \t test_split0\n",
       "Yaml file will be named as split0_3.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split1_0 \t val_split1_0 \t test_split1\n",
-      "Yaml file will be named as split1_0.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split1_1 \t val_split1_1 \t test_split1\n",
-      "Yaml file will be named as split1_1.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split1_2 \t val_split1_2 \t test_split1\n",
-      "Yaml file will be named as split1_2.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split1_3 \t val_split1_3 \t test_split1\n",
-      "Yaml file will be named as split1_3.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split2_0 \t val_split2_0 \t test_split2\n",
-      "Yaml file will be named as split2_0.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split2_1 \t val_split2_1 \t test_split2\n",
-      "Yaml file will be named as split2_1.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split2_2 \t val_split2_2 \t test_split2\n",
-      "Yaml file will be named as split2_2.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split2_3 \t val_split2_3 \t test_split2\n",
-      "Yaml file will be named as split2_3.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split3_0 \t val_split3_0 \t test_split3\n",
-      "Yaml file will be named as split3_0.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split3_1 \t val_split3_1 \t test_split3\n",
-      "Yaml file will be named as split3_1.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split3_2 \t val_split3_2 \t test_split3\n",
-      "Yaml file will be named as split3_2.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split3_3 \t val_split3_3 \t test_split3\n",
-      "Yaml file will be named as split3_3.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split4_0 \t val_split4_0 \t test_split4\n",
-      "Yaml file will be named as split4_0.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split4_1 \t val_split4_1 \t test_split4\n",
-      "Yaml file will be named as split4_1.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split4_2 \t val_split4_2 \t test_split4\n",
-      "Yaml file will be named as split4_2.yaml\n",
-      "\n",
-      "Training, validation and testing set is\n",
-      "train_split4_3 \t val_split4_3 \t test_split4\n",
-      "Yaml file will be named as split4_3.yaml\n",
       "\n"
      ]
     }
@@ -431,9 +315,11 @@
    "id": "9d9f7428",
    "metadata": {},
    "source": [
-    "Now all the yaml files for training, validation and prediction are created! The training yaml files are located in `/configs/training/train_DBwise_smoke/` and the prediction yaml files in `/configs/predicting/prediction_DBwise_smoke/`.\n",
+    "Now all the yaml files for training, validation and prediction are created! The training yaml files are located in `/configs/training/train_stratified_smoke/` names as `split0_0.yaml`, `split0_1.yaml`. `split0_2.yaml` and `split0_3.yaml`, and the prediction yaml files in `/configs/predicting/prediction_stratified_smoke/` named with the same names.\n",
     "\n",
-    "<font color=red>**NOTE!**</font> If you are now wondering why the yaml files don't have the csv values --- `train_file`, `val_file` and `test_file` --- in single quotation marks, it's ok. Scripts are able to read and load the values from the yaml files even without those marks!"
+    "<font color=red>**NOTE 1!**</font> It is extremely important that in the test yaml file the model is set with the same name as the yaml file which the model is trained with. E.g. when a model is trained using `split0_0.yaml`, it will be saved as `split0_0.pth`. This makes using the repository much easier and simpler. Mind this, if you want to edit the code below.\n",
+    "\n",
+    "<font color=red>**NOTE 2!**</font> If you are now wondering why the yaml files don't have the csv values --- `train_file`, `val_file` and `test_file` --- in single quotation marks, it's ok. Scripts are able to read and load the values from the yaml files even without those marks!"
    ]
   }
  ],
