--- a/notebooks/3_introductions_training.ipynb
+++ b/notebooks/3_introductions_training.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "Training can be performed either with a single yaml file or with several yaml files located in the same directory.\n",
     "\n",
+    "To train a model, you'll need csv files to tell a model which part of the data are used as training data, which part as validation data and which part as testing data, and yaml files based on these csv files for detailed configurations. The csv files can be created by following the introductions in the notebook [Introductions for Data Handling](1_introductions_data_handling.ipynb). Yaml files can be created with the notebooks [Yaml files of Database-wise Split for Training and Prediction](2_physionet_DBwise_yaml_files.ipynb) and [Yaml files of Stratified Split for Training and Prediction](2_physionet_stratified_yaml_files.ipynb).\n",
+    "\n",
     "------\n"
    ]
   },
@@ -25,7 +27,7 @@
     "val_file: 'val_split0_0.csv'\n",
     "\n",
     "# TRAINING SETTINGS\n",
-    "batch_size: 64\n",
+    "batch_size: 10\n",
     "num_workers: 0\n",
     "\n",
     "# SAVE, LOAD AND DISPLAY INFORMATION\n",
@@ -34,9 +36,7 @@
     "\n",
     "where `train_file` refers to a csv file which is used for training phase of epoch(s). It consists of the paths for ECG recordings, patients' gender and age, and labels used in the classification. `val_file` refers to a csv file which is used in the validation phase of epoch(s). `epochs` refers to the total number of training epochs.\n",
     "\n",
-    "If you want to run multiple yaml files at the same run, locate all individual yaml files in one directory.\n",
-    "\n",
-    "<font color ='red'>**NOTE!**</font> You might need to create the csv files set in the yaml file. You can do it with the introductions in the notebook [Introductions for Data Handling](introductions_data.ipynb)."
+    "If you want to run multiple yaml files at the same run, locate all individual yaml files in one directory."
    ]
   },
   {
@@ -62,7 +62,7 @@
    "id": "4a601f85",
    "metadata": {},
    "source": [
-    "Trained model(s), ROC curves of the validation phase and training history will be saved in a subdirectory of the `experiments` directory. With the multiple yaml file run, all mentioned will be saved in a subdirectory of the `experiments` directory. Each file or directory will be named after the used yaml file or the directory where the yaml files exist.\n",
+    "Trained model(s), ROC curves of the training history will be saved in a subdirectory of the `experiments` directory. Each file or directory will be named after the used yaml file or the directory where the yaml files exist.\n",
     "\n",
     "Model will be saved in a `pth` format, ROC curves as `png` images and history as a `pickle` file. ROC curves will have a directory of their own."
    ]
@@ -77,8 +77,8 @@
     "Run a terminal command which consist of the script and the yaml file *or* the directory where all the yaml files are located, so one of the followings\n",
     "\n",
     "```\n",
-    "python train_model.py train_data.yaml\n",
-    "python train_model.py training_multiple\n",
+    "python train_model.py train_smoke.yaml\n",
+    "python train_model.py training_multiple_smoke\n",
     "```"
    ]
   },
@@ -102,21 +102,22 @@
     "Train csv:\n",
     "```\n",
     "path,age,gender,fs,426783006,426177001,164934002,427084000,164890007,39732003,164889003,59931005,427393009,270492004\n",
-    "./data/physionet_data_smoke/G12EC/E00001.mat,-1.0,Female,500.0,1.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0\n",
-    "./data/physionet_data_smoke/G12EC/E00007.mat,65.0,Male,500.0,0.0,0.0,0.0,0.0,1.0,0.0,1.0,0.0,0.0,0.0\n",
-    "./data/physionet_data_smoke/G12EC/E00004.mat,75.0,Male,500.0,0.0,1.0,1.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0\n",
-    "./data/physionet_data_smoke/G12EC/E00008.mat,76.0,Male,500.0,0.0,0.0,0.0,1.0,0.0,1.0,0.0,0.0,0.0,0.0\n",
-    "./data/physionet_data_smoke/G12EC/E00006.mat,65.0,Male,500.0,0.0,0.0,1.0,0.0,0.0,0.0,0.0,1.0,0.0,0.0\n",
+    "./data/physionet_preprocessed_smoke/G12EC/E00008_preprocessed.mat,76.0,Male,500.0,0.0,0.0,0.0,1.0,0.0,1.0,0.0,0.0,0.0,0.0\n",
+    "./data/physionet_preprocessed_smoke/G12EC/E00006_preprocessed.mat,65.0,Male,500.0,0.0,0.0,1.0,0.0,0.0,0.0,0.0,1.0,0.0,0.0\n",
+    "./data/physionet_preprocessed_smoke/G12EC/E00005_preprocessed.mat,83.0,Male,500.0,0.0,0.0,0.0,0.0,0.0,0.0,1.0,0.0,0.0,0.0\n",
+    "./data/physionet_preprocessed_smoke/G12EC/E00004_preprocessed.mat,75.0,Male,500.0,0.0,1.0,1.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0\n",
     "...\n",
     "```\n",
     "\n",
     "Val csv:\n",
     "```\n",
     "path,age,gender,fs,426783006,426177001,164934002,427084000,164890007,39732003,164889003,59931005,427393009,270492004\n",
-    "./data/physionet_data_smoke/G12EC/E00009.mat,76.0,Male,500.0,0.0,0.0,0.0,1.0,0.0,1.0,0.0,0.0,0.0,0.0\n",
-    "./data/physionet_data_smoke/INCART/I0064.mat,58.0,Male,257.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,1.0,0.0,0.0\n",
-    "./data/physionet_data_smoke/PTB_PTBXL/HR00009.mat,55.0,Male,500.0,1.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0\n",
-    "./data/physionet_data_smoke/PTB_PTBXL/HR00001.mat,56.0,Female,500.0,1.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0\n",
+    "./data/physionet_preprocessed_smoke/G12EC/E00001_preprocessed.mat,-1.0,Female,500.0,1.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0\n",
+    "./data/physionet_preprocessed_smoke/G12EC/E00003_preprocessed.mat,-1.0,Male,500.0,1.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0\n",
+    "./data/physionet_preprocessed_smoke/INCART/I0020_preprocessed.mat,59.0,Female,257.0,0.0,0.0,0.0,0.0,0.0,0.0,0.0,1.0,1.0,0.0\n",
+    "./data/physionet_preprocessed_smoke/INCART/I0050_preprocessed.mat,70.0,Male,257.0,0.0,0.0,0.0,1.0,0.0,0.0,1.0,0.0,0.0,0.0\n",
+    "./data/physionet_preprocessed_smoke/PTB_PTBXL/HR00008_preprocessed.mat,48.0,Male,500.0,1.0,0.0,0.0,0.0,0.0,1.0,0.0,0.0,0.0,0.0\n",
+    "./data/physionet_preprocessed_smoke/ChapmanShaoxing_Ningbo\n",
     "...\n",
     "```\n",
     "\n",
@@ -124,8 +125,10 @@
     "\n",
     "```\n",
     "csv_root = './data/split_csvs/physionet_stratified_smoke/'\n",
-    "data_root = './data/physionet_data_smoke/' \n",
+    "data_root = './data/physionet_preprocessed_smoke/' \n",
     "```\n",
+    "\n",
+    "<font color = red>**NOTE!**</font> <font color = green> **Here, the** `data_root` **attribute is set with the assumption that *the data used is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as** `./data/physionet_data_smoke/`. The paths for ECGs will be different in the csv files based on the fact if the data is preprocessed or not.</font>\n",
     "\n",
     "And other parameters as\n",
     "\n",
@@ -171,8 +174,10 @@
     "\n",
     "```\n",
     "csv_root = './data/split_csvs/physionet_stratified_smoke/'\n",
-    "data_root = './data/physionet_data_smoke/' \n",
+    "data_root = './data/physionet_preprocessed_smoke/' \n",
     "```\n",
+    "\n",
+    "<font color = red>**NOTE!**</font> <font color = green> **Here, the** `data_root` **attribute is set with the assumption that *the data used is preprocessed*. If that's not the case, you should use, for example, the original data directory, such as** `./data/physionet_data_smoke/`. The paths for ECGs will be different in the csv files based on the fact if the data is preprocessed or not.</font> \n",
     "\n",
     "Terminal command for training is now\n",
     "\n",
