--- a/notebooks/cheatsheet.ipynb
+++ b/notebooks/cheatsheet.ipynb
@@ -12,14 +12,14 @@
     "-----\n",
     "\n",
     "\n",
-    "## Download Data\n",
+    "## <font color = green>Download Data</font>\n",
     "\n",
-    "[Introductions for Data Handling](introductions_data_handling.ipynb)\n",
+    "[Introductions for Data Handling](1_introductions_data_handling.ipynb)\n",
     "\n",
     "----\n",
     "\n",
-    "## Preprocess Data\n",
-    "[Introductions for Data Handling](introductions_data_handling.ipynb)\n",
+    "## <font color = green>Preprocess Data</font>\n",
+    "[Introductions for Data Handling](1_introductions_data_handling.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
@@ -44,8 +44,8 @@
     "----\n",
     "\n",
     "\n",
-    "## Split Data into Csv files\n",
-    "[Introductions for Data Handling](introductions_data_handling.ipynb)\n",
+    "## <font color = green>Split Data into Csv Files</font>\n",
+    "[Introductions for Data Handling](1_introductions_data_handling.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
@@ -69,16 +69,16 @@
     "\n",
     "----\n",
     "\n",
-    "## Create Yaml Files\n",
+    "## <font color = green>Create Yaml Files</font>\n",
     "\n",
-    "[Yaml files of Database-wise Split for Training and Prediction](physionet_DBwise_yaml_files.ipynb)\n",
+    "[Yaml files of Database-wise Split for Training and Prediction](2_physionet_DBwise_yaml_files.ipynb)\n",
     "\n",
-    "[Yaml files of Stratified Split for Training and Prediction](physionet_stratified_yaml_files.ipynb)\n",
+    "[Yaml files of Stratified Split for Training and Prediction](2_physionet_stratified_yaml_files.ipynb)\n",
     "\n",
     "---\n",
     "\n",
-    "##  Train a Model\n",
-    "[Introductions for Training a Model](introductions_training.ipynb)\n",
+    "##  <font color = green>Train a Model</font>\n",
+    "[Introductions for Training a Model](3_introductions_training.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
@@ -100,9 +100,9 @@
     "\n",
     "---\n",
     "\n",
-    "## Test a tra\n",
+    "## <font color = green>Test a Model</font>\n",
     "\n",
-    "[Introductions for the Prediction and Evaluation](introductions_prediction_evaluation.ipynb)\n",
+    "[Introductions for the Prediction and Evaluation](4_introductions_prediction_evaluation.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
